--- a/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
@@ -9,8 +9,10 @@
 
     <Button
         android:id="@+id/buttonMenu"
-        android:layout_width="181dp"
+        android:layout_width="160dp"
         android:layout_height="48dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/o_menu_button"
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,8 +20,10 @@
 
     <Button
         android:id="@+id/buttonShop"
-        android:layout_width="194dp"
-        android:layout_height="48dp"
+        android:layout_width="160dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/o_shop_button"
         android:textSize="20dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -30,25 +34,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/owned_label"
+        android:textAlignment="center"
         android:textSize="35dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonMenu" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="124dp"
-        app:layout_constraintTop_toBottomOf="@id/textTitle"
-        app:layout_constraintLeft_toLeftOf="parent">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTitle"
+        app:layout_constraintVertical_bias="1.0">
 
-        <TextView
-            android:id="@+id/card1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/custom_label"
-            android:textSize="30dp" />
-    </android.support.v7.widget.CardView>
+        <include layout="@layout/customizationitem" />
+
+    </android.support.v7.widget.RecyclerView>
+
 </android.support.constraint.ConstraintLayout>
