--- a/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
@@ -43,12 +43,10 @@
 
     <ListView
         android:id="@+id/listView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTitle">
-
-        <include layout="@layout/customizationitem" />
 
     </ListView>
 
